added notification panel

--- a/scss/base/_images.scss
+++ b/scss/base/_images.scss
@@ -9,6 +9,7 @@ img {
 
 svg {
     flex-shrink: 0;
+    display: block;
 }
 
 .header-nav svg {
@@ -46,6 +47,6 @@ svg {
 }
 
 .small-size {
-    width: 1.5em;
-    height: 1.5em;
+    width: 1.5rem;
+    height: 1.5rem;
 }
