--- a/css/application.css
+++ b/css/application.css
@@ -5,7 +5,8 @@ body {
   color: #f8f8f8;
   font-size: 1rem;
   line-height: 1.5;
-  font-family: "Rubik", sans-serif; }
+  font-family: "Rubik", sans-serif;
+  font-weight: 300; }
 
 .wrapper {
   background-color: #f8f8f8; }
@@ -56,6 +57,7 @@ body {
   cursor: pointer; }
 
 .main-nav-sidebar {
+  z-index: 1000;
   background-color: #fff;
   width: 4em;
   height: 100%;
@@ -91,7 +93,8 @@ img {
   width: 100%; }
 
 svg {
-  flex-shrink: 0; }
+  flex-shrink: 0;
+  display: block; }
 
 .header-nav svg {
   fill: #f8f8f8;
@@ -121,8 +124,96 @@ svg {
   border-radius: 50%; }
 
 .small-size {
-  width: 1.5em;
-  height: 1.5em; }
+  width: 1.5rem;
+  height: 1.5rem; }
+
+/* -------------------------The alert message box---------------------------- */
+.alert {
+  padding: .2em 1em;
+  background-color: #549594;
+  color: #f8f8f8;
+  border-radius: 4px;
+  margin-bottom: 1em;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  align-items: center; }
+
+/* The close button */
+.closebtn {
+  margin-left: auto;
+  background-color: transparent;
+  border: none;
+  color: #f8f8f8;
+  font-size: 1.5em;
+  line-height: 1.5;
+  font-family: "Rubik", sans-serif;
+  font-weight: 500;
+  float: right;
+  cursor: pointer;
+  transition: 0.3s ease-out; }
+  .closebtn:hover {
+    transform: scale(1.3); }
+
+/*-------------------- Dropdown notifications ---------------------------------*/
+.alert-indicator {
+  visibility: hidden;
+  opacity: 0;
+  width: 7px;
+  height: 7px;
+  border-radius: 50%;
+  position: absolute;
+  top: -1px;
+  right: -2px;
+  background-color: #e3695c;
+  z-index: 2000;
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1); }
+
+/* position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block; }
+
+/* Dropdown Content (Hidden by Default) */
+.notification-content {
+  visibility: hidden;
+  opacity: 0;
+  margin-top: .5em;
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  background-color: #fff;
+  border-radius: 4px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  min-width: 250px;
+  z-index: 1;
+  left: 50%;
+  right: auto;
+  transform: translate(-5%, 0);
+  /* change background colour of notifications on hover */
+  /* styling for the notifications */ }
+  .notification-content div:hover {
+    background-color: #f2f2f2; }
+  @media (min-width: 1024px) {
+    .notification-content {
+      transform: translate(-50%, 0); } }
+  .notification-content .notification {
+    padding: .2em 1em;
+    background-color: #fff;
+    color: #292e2f;
+    margin: 0;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    align-items: center; }
+  .notification-content .closebtn {
+    color: #e3695c; }
+
+/* Show the dropdown menu */
+.show {
+  visibility: visible;
+  opacity: 1; }
 
 html,
 body {
@@ -170,5 +261,16 @@ body {
     flex-direction: column;
     justify-content: space-between;
     text-align: center; }
+
+.content {
+  margin-top: 1em;
+  transform: translate3d(-32px, 0px, 0px);
+  width: 100%;
+  max-width: 1000px;
+  margin-left: auto;
+  margin-right: auto; }
+  @media (min-width: 1024px) {
+    .content {
+      transform: translate3d(0px, 0px, 0px); } }
 
 /*# sourceMappingURL=application.css.map */
