--- a/scss/layout/_layout.scss
+++ b/scss/layout/_layout.scss
@@ -51,3 +51,12 @@ body {
         text-align: center;
     }
 }
+
+.content {
+    margin-top: 1em;
+    transform: translate3d(-32px, 0px, 0px);
+    @include center(100%);
+    @media ($brk-desktop) {
+        transform: translate3d(0px, 0px, 0px);
+    }
+}
