added traffic chart widget and functionality

--- a/scss/base/_images.scss
+++ b/scss/base/_images.scss
@@ -30,7 +30,7 @@ svg {
     }
 }
 
-.main-nav-sidebar .active svg {
+.main-nav-sidebar .current svg {
     @media ($brk-desktop) {
         fill: $color-dark;
     }
