--- a/scss/base/_navigation.scss
+++ b/scss/base/_navigation.scss
@@ -62,7 +62,7 @@
             &:hover {
                 border-left: 4px solid $color-accent-red;
             }
-            &.active {
+            &.current {
                 background-color: $color-light-medium;
                 border-left: 4px solid $color-accent-red;
             }
