--- a/css/application.css
+++ b/css/application.css
@@ -77,7 +77,7 @@ body {
       transition: all .3s; }
       .main-nav-sidebar ul li:hover {
         border-left: 4px solid #e3695c; }
-      .main-nav-sidebar ul li.active {
+      .main-nav-sidebar ul li.current {
         background-color: #f2f2f2;
         border-left: 4px solid #e3695c; }
   .main-nav-sidebar ul li a {
@@ -112,7 +112,7 @@ svg {
       fill: #f8f8f8; } }
 
 @media (min-width: 1024px) {
-  .main-nav-sidebar .active svg {
+  .main-nav-sidebar .current svg {
     fill: #292e2f; } }
 
 .icon-x {
@@ -199,6 +199,7 @@ svg {
     .notification-content {
       transform: translate(-50%, 0); } }
   .notification-content .notification {
+    border-radius: 4px;
     padding: .2em 1em;
     background-color: #fff;
     color: #292e2f;
@@ -214,6 +215,59 @@ svg {
 .show {
   visibility: visible;
   opacity: 1; }
+
+.container {
+  padding: .9em; }
+
+.dark-bg {
+  background-color: #292e2f;
+  border-radius: 4px; }
+
+.traffic-labels {
+  color: #f8f8f8;
+  font-size: 1rem;
+  line-height: 1.5;
+  font-family: "Rubik", sans-serif;
+  font-size: .9em;
+  margin-bottom: 1em; }
+  .traffic-labels h2 {
+    font-size: 1.3em;
+    font-weight: 400;
+    margin: 0;
+    padding: 0 0 .9em 0; }
+    @media (min-width: 768px) {
+      .traffic-labels h2 {
+        padding: 0; } }
+  .traffic-labels ul {
+    padding: 0;
+    margin: 0; }
+    .traffic-labels ul li {
+      list-style: none;
+      margin: 0;
+      transition: all 0.5s ease-out; }
+      .traffic-labels ul li:hover {
+        transform: translateY(-2px); }
+      .traffic-labels ul li a {
+        color: rgba(248, 248, 248, 0.5);
+        font-size: 1rem;
+        line-height: 1.5;
+        font-family: "Rubik", sans-serif;
+        font-size: .9em;
+        padding: .4em 1.1em;
+        margin-left: .5em;
+        margin-right: .5em;
+        cursor: pointer;
+        transition: all 0.5s ease-out;
+        border: 1px solid rgba(248, 248, 248, 0.5);
+        border-radius: 1.2em; }
+        .traffic-labels ul li a:hover, .traffic-labels ul li a:link, .traffic-labels ul li a:visited {
+          text-decoration: none; }
+        .traffic-labels ul li a.active {
+          border: 1px solid #f8f8f8;
+          color: #f8f8f8; }
+
+.traffic-chart {
+  height: 150px; }
 
 html,
 body {
@@ -272,5 +326,18 @@ body {
   @media (min-width: 1024px) {
     .content {
       transform: translate3d(0px, 0px, 0px); } }
+
+.traffic-labels {
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+  @media (min-width: 768px) {
+    .traffic-labels {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between; } }
+  .traffic-labels ul {
+    display: flex;
+    justify-content: space-between; }
 
 /*# sourceMappingURL=application.css.map */
