--- a/scss/base/_notifications.scss
+++ b/scss/base/_notifications.scss
@@ -77,6 +77,7 @@
 
     /* styling for the notifications */
     .notification {
+        border-radius: $br;
         padding: .2em 1em;
         background-color: $white;
         color: $color-dark;
