--- a/scss/base/_chartwidgets.scss
+++ b/scss/base/_chartwidgets.scss
@@ -38,10 +38,10 @@
             }
             a {
                 @include text($color: rgba($color-light, .5));
-                font-size: .9em;
-                padding: .4em 1.1em;
-                margin-left: .5em;
-                margin-right: .5em;
+                font-size: .7em;
+                padding: .3em 1.1em;
+                margin-left: .2em;
+                margin-right: .2em;
                 cursor: pointer;
                 transition: all 0.5s ease-out;
                 border: 1px solid rgba($color-light, .5);
@@ -54,6 +54,12 @@
                 &.active {
                     border: 1px solid $color-light;
                     color: $color-light;
+                }
+                @media ($brk-mobile-large) {
+                    font-size: .9em;
+                    padding: .4em 1.1em;
+                    margin-left: .5em;
+                    margin-right: .5em;
                 }
             }
 
