--- a/scss/layout/_layout.scss
+++ b/scss/layout/_layout.scss
@@ -54,8 +54,9 @@ body {
 
 .content {
     margin-top: 1em;
-    transform: translate3d(-32px, 0px, 0px);
-    @include center(100%);
+    transform: translate3d(-2rem, 0px, 0px);
+    width: 100vw;
+    @include center(95%);
     @media ($brk-desktop) {
         transform: translate3d(0px, 0px, 0px);
     }
