--- a/scss/base/_chartwidgets.scss
+++ b/scss/base/_chartwidgets.scss
@@ -55,7 +55,7 @@
                     border: 1px solid $color-light;
                     color: $color-light;
                 }
-                @media ($brk-mobile-large) {
+                @media ($brk-tablet) {
                     font-size: .9em;
                     padding: .4em 1.1em;
                     margin-left: .5em;
