--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -27,5 +27,6 @@ $round: 50%;
 
 // Break points
 $brk-mobile : 'min-width: 320px';
+$brk-mobile-wide: 'min-width: 340px';
 $brk-tablet : 'min-width: 768px';
 $brk-desktop : 'min-width: 1024px';
