--- a/scss/base/_navigation.scss
+++ b/scss/base/_navigation.scss
@@ -43,11 +43,10 @@
 .main-nav-sidebar {
     z-index: 1000;
     background-color: $white;
-    width: 4rem;
+    width: 60px;
     height: 100%;
     box-shadow: 0 3px 6px rgba($color-dark,0.1), 0 3px 6px rgba($color-dark,0.1);
-    transform: translate3d(0px, 0px, 0px);
-    transition: transform .3s;
+    transition: margin .3s;
     @media ($brk-desktop) {
         background-color: $color-dark;
     }
@@ -75,9 +74,9 @@
 }
 
 .sidebar-hidden {
-    transform: translate3d(-4rem, 0px, 0px);
+    margin-left: -60px;
     @media ($brk-desktop) {
-        transform: translate3d(0px, 0px, 0px);
+        margin-left: 0;
     }
 
 }
