--- a/scss/base/_notifications.scss
+++ b/scss/base/_notifications.scss
@@ -9,9 +9,12 @@
     background-color: $color-accent-blue;
     color: $color-light;
     border-radius: $br;
-    margin-bottom: 1em;
+    margin-bottom: .5em;
     @include flex($dir: row-reverse, $just: space-between);
     align-items: center;
+    @media($brk-desktop) {
+        margin-bottom: $margin-large;
+    }
 }
 
 /* The close button */
@@ -60,7 +63,7 @@
     position: absolute;
     background-color: $white;
     border-radius: $br;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    box-shadow: $shadow;
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
     min-width: 250px;
     z-index: 1;
