--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -22,6 +22,13 @@ $max-width: 1000px;
 // Border radius
 $br: 4px;
 
+//margin bottom
+$margin-small: .5em;
+$margin-large: 1.5em;
+
+//box shadow
+$shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+
 //Round image
 $round: 50%;
 
