--- a/css/application.css
+++ b/css/application.css
@@ -10,8 +10,10 @@ body {
 
 html,
 body {
-  height: 100%;
-  overflow-x: hidden; }
+  overflow-x: hidden;
+  padding: 0;
+  margin: 0;
+  min-height: 100%; }
 
 .wrapper {
   background-color: #f8f8f8; }
@@ -63,10 +65,9 @@ body {
   cursor: pointer; }
 
 .main-nav-sidebar {
-  z-index: 1000;
   background-color: #fff;
   width: 60px;
-  height: 100%;
+  min-height: 100%;
   box-shadow: 0 3px 6px rgba(41, 46, 47, 0.1), 0 3px 6px rgba(41, 46, 47, 0.1);
   transition: margin .3s; }
   @media (min-width: 1024px) {
@@ -337,15 +338,6 @@ svg {
     margin: 0;
     padding: 0 0 .9em 0; }
 
-html,
-body {
-  height: 100%;
-  padding: 0;
-  margin: 0; }
-
-body {
-  overflow-x: hidden; }
-
 .header-nav {
   display: flex;
   flex-direction: row-reverse;
@@ -371,7 +363,7 @@ body {
         order: 2; } }
 
 .wrapper {
-  height: 100%;
+  min-height: 100%;
   display: flex;
   flex-direction: row; }
 
@@ -385,7 +377,7 @@ body {
     text-align: center; }
 
 .content {
-  height: 100%;
+  min-height: 100%;
   padding: .5em .5em;
   width: 100%;
   max-width: 1000px;
