--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -14,8 +14,10 @@ body {
 
 html,
 body {
-    height: 100%;
     overflow-x: hidden;
+    padding: 0;
+    margin: 0;
+    min-height: 100%;
 }
 
 .wrapper {
