--- a/scss/base/_navigation.scss
+++ b/scss/base/_navigation.scss
@@ -42,10 +42,9 @@
 // -----------------Main Nav------------------//
 
 .main-nav-sidebar {
-    z-index: 1000;
     background-color: $white;
     width: 60px;
-    height: 100%;
+    min-height: 100%;
     box-shadow: 0 3px 6px rgba($color-dark,0.1), 0 3px 6px rgba($color-dark,0.1);
     transition: margin .3s;
     @media ($brk-desktop) {
