--- a/scss/layout/_layout.scss
+++ b/scss/layout/_layout.scss
@@ -1,16 +1,6 @@
 // ======================================
 //  Layout
 // ======================================
-html,
-body {
-  height: 100%;
-  padding: 0;
-  margin: 0;
-}
-
-body {
-    overflow-x: hidden;
-}
 
 .header-nav {
     @include flex($dir: row-reverse, $just: space-around);
@@ -40,7 +30,7 @@ body {
 }
 
 .wrapper {
-    height: 100%;
+    min-height: 100%;
     @include flex($dir: row);
 }
 
@@ -53,7 +43,7 @@ body {
 }
 
 .content {
-    height: 100%;
+    min-height: 100%;
     padding: .5em .5em;
     @include center(100%);
     @media ($brk-desktop) {
