--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -29,6 +29,9 @@ $margin-large: 1.5em;
 //box shadow
 $shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 
+//container border
+$border: 3px solid rgba($color-medium, .2);
+
 //Round image
 $round: 50%;
 
