--- a/scss/base/_images.scss
+++ b/scss/base/_images.scss
@@ -51,6 +51,11 @@ svg {
     height: 1.5rem;
 }
 
+.preview-img-size {
+    width: 2.5rem;
+    height: 2.5rem;
+}
+
 .medium-size {
     width: 3rem;
     height: 3rem;
