--- a/scss/base/_socialwidgets.scss
+++ b/scss/base/_socialwidgets.scss
@@ -1,5 +1,5 @@
 // ======================================
-//  Imports social widgets
+//  Social widgets styles
 // ======================================
 
 .social {
