--- a/scss/base/_memberswidgets.scss
+++ b/scss/base/_memberswidgets.scss
@@ -37,10 +37,12 @@
                 margin: 0;
                 padding: 0;
             }
-            span {
+            span a {
                 color: $color-accent-blue;
                 font-size: .9em;
                 font-weight: 300;
+                text-decoration: none;
+
             }
         }
         .date {
