--- a/scss/base/_index.scss
+++ b/scss/base/_index.scss
@@ -6,6 +6,8 @@
 @import 'navigation';
 @import 'images';
 @import 'notifications';
+@import 'tooltips';
 @import 'chartwidgets';
 @import 'socialwidgets';
 @import 'memberswidgets';
+@import 'forms';
