added form validation, rearranged folders

--- a/css/application.css
+++ b/css/application.css
@@ -526,6 +526,18 @@ svg {
       .memberList ul li:hover {
         background-color: #dddfde; }
 
+.swal2-modal .swal2-title {
+  color: #292e2f;
+  font-size: 1.5rem;
+  line-height: 1.5;
+  font-family: "Rubik", sans-serif; }
+
+.swal2-content {
+  color: #292e2f;
+  font-size: 0.9em;
+  line-height: 1.5;
+  font-family: "Rubik", sans-serif; }
+
 .header-nav {
   display: flex;
   flex-direction: row-reverse;
